--- a/Dockerfile.namenode
+++ b/Dockerfile.namenode
@@ -6,7 +6,6 @@ EXPOSE 8800
 
 ADD . .
 
-RUN apt-get update && apt-get install -y --no-install-recommends gettext && apt-get clean
+RUN apt-get update && apt-get install -y --no-install-recommends gettext && apt-get clean && apt install python3
 
-CMD python naming_server.py
-
+CMD python3 naming_server.py
