--- a/Dockerfile.datanode
+++ b/Dockerfile.datanode
@@ -6,6 +6,7 @@ EXPOSE 8801
 
 ADD . .
 
+RUN pip3 install requests
 RUN apt-get update && apt-get install -y --no-install-recommends gettext && apt-get clean
 
 CMD python storage_server.py
