--- a/Dockerfile.namenode
+++ b/Dockerfile.namenode
@@ -6,6 +6,7 @@ EXPOSE 8800
 
 ADD . .
 
+RUN pip3 install requests
 RUN apt-get update && apt-get install -y --no-install-recommends gettext && apt-get clean
 
 CMD python naming_server.py
