Small fixes and notes

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ storage_server_logs.txt
 naming_server_logs.txt
 storage_server_logs.txt
 project notes.txt
+Group Project Assignment_ Distributed File System (2).pdf
