prints and fixing replication

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ naming_server_logs.txt
 storage_server_logs.txt
 project notes.txt
 Group Project Assignment_ Distributed File System (2).pdf
+lab-key-pair.pem
+mypdf.pdf
